--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,36 @@
-aiohttp==3.8.1
-black==22.6.0
-pytest==7.1.2
-pytest-aiohttp==1.0.4
-pytest-asyncio==0.19.0
-pytest-env==0.6.2
+aiohttp==3.8.5
+aiohttp-apispec==2.2.1
+aiohttp-session==2.9.0
+aiosignal==1.3.1
+apispec==3.3.2
+alembic==1.8.1
+asyncpg==0.26.0
+async-timeout==4.0.3
+attrs==21.2.0
+bcrypt==3.2.0
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==3.2.0
+cryptography==3.4.7
+exceptiongroup==1.1.3
+frozenlist==1.4.0
+idna==3.2
+iniconfig==1.1.1
+Jinja2==2.11.3
+MarkupSafe==2.0.1
+marshmallow==3.13.0
+multidict==5.1.0
+packaging==21.0
+pluggy==0.13.1
+pycparser==2.20
+pyparsing==2.4.7
+pytest==7.4.0
+pytest-aiohttp==0.3.0
+PyYAML==6.0.1
+SQLAlchemy==1.4.40
+six==1.16.0
+toml==0.10.2
+tomli==2.0.1
+typing-extensions==3.10.0.0
+webargs==5.5.3
+yarl==1.9.2
