--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ exceptiongroup==1.1.3
 frozenlist==1.4.0
 idna==3.2
 iniconfig==1.1.1
-Jinja2==2.11.3
+Jinja2
 MarkupSafe==2.0.1
 marshmallow==3.13.0
 multidict==5.1.0
@@ -35,3 +35,4 @@ tomli==2.0.1
 typing-extensions==3.10.0.0
 webargs==5.5.3
 yarl==1.9.2
+redis==4.1.4
